--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -109,7 +109,7 @@ h3 {
     <!-- Collect the nav links for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav" id='navbar-text'>
-        <li><a href="/index">Collocations</li><span class="sr-only">(current)</span></a></li>
+        <li><a href="/">Collocations</li><span class="sr-only">(current)</span></a></li>
         <li><a href="/timeline">Speeches</a></li><span class="sr-only">(current)</span></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
