--- a/templates/index.html
+++ b/templates/index.html
@@ -2,298 +2,78 @@
 <html>
 
 <head>
+	<title>Phrase Sentiment</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	
+	<script src="https://code.jquery.com/jquery.js"></script>
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.js"></script>
+
 	<link href='https://color.adobe.com/Gettysburg-color-theme-209416/' rel='stylesheet' type='text/html'>
+
 	<link href="https://fonts.googleapis.com/css?family=Cabin:400,500|Source+Sans+Pro:600,700" rel="stylesheet">
+	
+	<link rel="stylesheet" type="text/css" href="/static/css/force.css">
 
-<style>	
-.navbar-default {
-	background-color: #962D3E;
-}
-
-.navbar-default .navbar-brand {
-	color: #343642;
-	font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 600;
-    font-size: 30px
-}
-
-#navbar-text {
-	color: white;
-	font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 600;
-    font-size: 22px;
-}
-
-body {
-    background-color: #F2EBC7;
-}
-
-h3 {
-	font-family: 'Source Sans Pro', sans-serif;
-	padding-top: .5em;
-	padding-left: 1em;
-	color: #343642;
-}
-
-.legend {
- 	list-style: none;
-}
-
-.legend li {
-	float: left;
-	margin-right: 15px;
-	font-family: 'Cabin', sans-serif;
-	font-size: 14px;
-}
-
-.legend span {
-	border: 1px solid white;
-	float: left;
-	width: 12px;
-	height: 12px;
-	margin: 3px;
-
-}
-
-.legend .prez {
-	background-color: rgb(52,54,66);
-}
-
-.legend .title {
-	background-color: rgb(30,79,89);
-}
-
-.legend .pos {
-	background-color: rgb(91,227,116);
-}
-
-.legend .neut {
-	background-color: rgb(43,113,127);
-}
-
-.legend .neg {
-	background: rgb(150,45,62);
-}
-
-.link.prez-speech {
-	fill: none;
-  	stroke: #343642;
-  	stroke-width: 1.5px;
-}
-
-.link.speech-bigram {
-	fill: none;
-	stroke: #343642;
-	stroke-width: 1.5px;
-}
-
-.node1 {
-	stroke: black;
-	stroke-width: 2;
-}
-
-text {
-	font-family: 'Cabin', sans-serif;
-	font-weight: 400;
-}
-
-#about.h2 {
-	font-family: 'Cabin', sans-serif;
-	font-weight: 500;
-	color: #962D3E;
-}
-
-#about.p {
-	font-family: Source Sans Pro, sans-serif;
-	font-weight: 600;
-	font-size: 14px;
-}
-
-</style>
 </head>
+
 <body>
 
-<html>
-<body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <p class="navbar-brand">Feeling Presidential</p>
-    </div>
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <p class="navbar-brand">Feeling Presidential</p>
+	    </div>
 
-    <!-- Collect the nav links for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav" id='navbar-text'>
-        <li><a href="/index">Collocations</li><span class="sr-only">(current)</span></a></li>
-        <li><a href="/timeline">Speeches</a></li><span class="sr-only">(current)</span></a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container -->
-</nav>
+	    <!-- Collect the nav links for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav" id='navbar-text'>
+	        <li><a href="/">Collocations</li><span class="sr-only">(current)</span></a></li>
+	        <li><a href="/timeline">Speeches</a></li><span class="sr-only">(current)</span></a></li>
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container -->
+	</nav>
    
 
-<h3>Most common repeated phrases</h3>
-<div class='container' id='legend-box'>
-	<div class='row'>
-		<div class='col-xs-12 col-md-12 col-lg-12'></div>
-		<ul class='legend'>
-			<li><span class='legend prez'></span>President</li>
-			<li><span class='legend title'></span>(I) Inaugural or (SoU) State of the Union</li>
-			<li><span class='legend pos'></span>Positive phrase</li>
-			<li><span class='legend neut'></span>Neutral phrase</li>
-			<li><span class='legend neg'></span>Negative phrase</li>
-		</ul>
+	<h3>Most common repeated phrases</h3>
+	<div class='container' id='legend-box'>
+		<div class='row'>
+			<div class='col-xs-12 col-md-12 col-lg-12'></div>
+			<ul class='legend'>
+				<li><span class='legend prez'></span>President</li>
+				<li><span class='legend title'></span>(I) Inaugural or (SoU) State of the Union</li>
+				<li><span class='legend pos'></span>Positive phrase</li>
+				<li><span class='legend neut'></span>Neutral phrase</li>
+				<li><span class='legend neg'></span>Negative phrase</li>
+			</ul>
+		</div>
 	</div>
-</div>
 
-
-<div class='container' id='force'>
-	<div class='row'>
-		<div class='col-xs-12 col-md-12 col-lg-12'></div>
+	<div class='container' id='force'>
+		<div class='row'>
+			<div class='col-xs-12 col-md-12 col-lg-12'></div>
+		</div>
 	</div>
-</div>
 
-	<script src='http://d3js.org/d3.v4.min.js'></script>
-	
-	<script>
+	<script src="http://d3js.org/d3.v4.min.js"></script>
+	<script type= 'text/javascript' src="/static/js/prez-force-layout.js"></script>
 
-	var width = 900;
-	var height = 900;
-	var radius = 10;
-
-	var svg = d3.select("#force").append('svg')
-		.attr('width', width)
-		.attr('height', height)
-	    
-
-	var simulation = d3.forceSimulation()
-		.alphaDecay(0.05)
-	    .force("link", d3.forceLink().distance(30).id(function(d) { return d.id; }))
-	    .force("charge", d3.forceManyBody())
-	    .force("center", d3.forceCenter(width / 2, height / 2));
-
-	d3.json("/data.json", function(error, graph) {
-		if (error) throw error;
-
-	  	var link = svg.append("g")
-		    .attr("class", "links")
-		    .selectAll("line")
-		    .data(graph.links)
-		    .enter().append("line")
-		    .attr("class", function(d) { return "link " + d.type; })
-		    .style('stroke-width', 1);
-	      // .attr("stroke-width", '1px');
-
-	    var color = {
-	    	1: 'rgb(52,54,66)',
-	    	2: 'rgb(30,79,89)',
-	    	3: 'rgb(91,227,116)',
-	    	4: 'rgb(43,113,127)', 
-	    	5: 'rgb(150,45,62)'}
-
-	    var sizes = {1: 16, 2: 5, 3: 3, 4: 3, 5: 3}
-
-	    var cirColor = {
-	    	1: 'rgb(151,156,156)',
-	    	2: 'rgb(30,79,89)',
-	    	3: 'rgb(91,227,116)',
-	    	4: 'rgb(43,113,127)', 
-	    	5: 'rgb(150,45,62)' }
-
-		var node = svg.append("g")
-		    .attr("class", "nodes")
-		    .selectAll("circle")
-		    .data(graph.nodes)
-		    .enter().append("circle")
-		    .attr("r", function(d) { return sizes[d.group]; })
-		    .attr("fill", function(d) { return cirColor[d.group]; })
-		    .attr('class', function(d) { return 'node' + d.group; })
-		    .call(d3.drag()
-	        	.on("start", dragstarted)
-		        .on("drag", dragged)
-		        .on("end", dragended));
-
-		node.append("title")
-	        .text(function(d) { return d.id; });
-
-
-	    // node.append("image")
-	    // 	.attr("xlink:href", function(d) { return d.icon; })
-	    //   .attr("x", "-12px")
-	    //   .attr("y", "-12px")
-	    //   .attr("width", "24px")
-	    //   .attr("height", "24px");
-
-	  
-		var text = svg.append("g").selectAll("text")
-            .data(graph.nodes)
-            .enter().append("text")
-            .attr("dx", 15)
-            .attr("dy", ".31em")
-            .text(function(d) { return d.name; })
-            .attr('id', function(d) { return d.group; })
-            .style('fill', function(d) { return color[d.group]; });
-
-	  	simulation
-	        .nodes(graph.nodes)
-	        .on("tick", ticked);
-
-	  	simulation.force("link")
-	        .links(graph.links);
-
-	    function ticked() {
-		    link
-		        .attr("x1", function(d) { return d.source.x; })
-		        .attr("y1", function(d) { return d.source.y; })
-		        .attr("x2", function(d) { return d.target.x; })
-		        .attr("y2", function(d) { return d.target.y; });
-
-		    node
-		        .attr("cx", function(d) { return d.x = Math.max(radius, Math.min(width - radius, d.x)); })
-		        .attr("cy", function(d) { return d.y = Math.max(radius, Math.min(height - radius, d.y)); });
-
-			text
-				.attr("x", function (d) { return d.x; })
-        		.attr("y", function (d) { return d.y; });
-	    }
-
-	});
-
-	function dragstarted(d) {
-	  if (!d3.event.active) simulation.alphaTarget(0.3).restart();
-	  d.fx = d.x;
-	  d.fy = d.y;
-	}
-
-	function dragged(d) {
-	  d.fx = d3.event.x;
-	  d.fy = d3.event.y;
-	}
-
-	function dragended(d) {
-	  if (!d3.event.active) simulation.alphaTarget(0);
-	  d.fx = null;
-	  d.fy = null;
-	}
-	</script>
-
-<div class='container' id='about'>
-	<div class='row'>
-		<div class='col-xs-12 col-md-3 col-md-offset-9 col-lg-4 col-lg-offset-4'></div>
-			<h2>About</h2>
-			<p>This d3 force layout represents the most common two-word phrases in this sampling of presidential speeches. Each phrase is tied to the speech it is from, which is in turn tied to the President who gave the speech.</p>
-			<p>Sentiment was done on the phrases shown here if they appeared more than three times in a single speech. Supervised machine learning was performed on a relatively small data set of politically speeches; using this data as a primary source for any research is not recommended.</p>
+	<div class='container' id='about'>
+		<div class='row'>
+			<div class='col-xs-12 col-md-3 col-md-offset-9 col-lg-4 col-lg-offset-4'></div>
+				<h2>About</h2>
+				<p>This d3 force layout represents the most common two-word phrases in this sampling of presidential speeches. Each phrase is tied to the speech it is from, which is in turn tied to the President who gave the speech.</p>
+				<p>Sentiment was done on the phrases shown here if they appeared more than three times in a single speech. Supervised machine learning was performed on a relatively small data set of politically speeches; using this data as a primary source for any research is not recommended.</p>
+		</div>
 	</div>
-</div>
 
 </body>
 
