--- a/templates/index.html
+++ b/templates/index.html
@@ -1,61 +1,24 @@
-<!doctype HTML>
-<html>
+{% extends 'base.html' %}
 
-<head>
-	<title>Phrase Sentiment</title>
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-	
-	<script src="https://code.jquery.com/jquery.js"></script>
+{% block title %}Prez Phrases{% endblock %}
 
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.js"></script>
+{% block content %}
 
-	<link href='https://color.adobe.com/Gettysburg-color-theme-209416/' rel='stylesheet' type='text/html'>
+<link rel="stylesheet" type="text/css" href="/static/css/force.css">
 
-	<link href="https://fonts.googleapis.com/css?family=Cabin:400,500|Source+Sans+Pro:600,700" rel="stylesheet">
-	
-	<link rel="stylesheet" type="text/css" href="/static/css/force.css">
-
-</head>
-
-<body>
-
-	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <p class="navbar-brand">Feeling Presidential</p>
-	    </div>
-
-	    <!-- Collect the nav links for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav" id='navbar-text'>
-	        <li><a href="/">Collocations</li><span class="sr-only">(current)</span></a></li>
-	        <li><a href="/timeline">Speeches</a></li><span class="sr-only">(current)</span></a></li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container -->
-	</nav>
-   
-
-	<h3>Most common repeated phrases</h3>
-	<div class='container' id='legend-box'>
-		<div class='row'>
-			<div class='col-xs-12 col-md-12 col-lg-12'></div>
-			<ul class='legend'>
-				<li><span class='legend prez'></span>President</li>
-				<li><span class='legend title'></span>(I) Inaugural or (SoU) State of the Union</li>
-				<li><span class='legend pos'></span>Positive phrase</li>
-				<li><span class='legend neut'></span>Neutral phrase</li>
-				<li><span class='legend neg'></span>Negative phrase</li>
-			</ul>
-		</div>
+<h3>Most common repeated phrases</h3>
+<div class='container' id='legend-box'>
+	<div class='row'>
+		<div class='col-xs-12 col-md-12 col-lg-12'></div>
+		<ul class='legend'>
+			<li><span class='legend prez'></span>President</li>
+			<li><span class='legend title'></span>(I) Inaugural or (SoU) State of the Union</li>
+			<li><span class='legend pos'></span>Positive phrase</li>
+			<li><span class='legend neut'></span>Neutral phrase</li>
+			<li><span class='legend neg'></span>Negative phrase</li>
+		</ul>
 	</div>
+</div>
 
 	<div class='container' id='force'>
 		<div class='row'>
@@ -75,6 +38,4 @@
 		</div>
 	</div>
 
-</body>
-
-</html>
+{% endblock %}
