--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,8 @@
       <!-- Collect the nav links for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav" id='navbar-text'>
-          <li><a href="/">Collocations</li><span class="sr-only">(current)</span></a></li>
-          <li><a href="/timeline">Speeches</a></li><span class="sr-only">(current)</span></a></li>
+          <li><a href="/">Phrase Sentiment</li><span class="sr-only">(current)</span></a></li>
+          <li><a href="/timeline">Speech Sentiment</a></li><span class="sr-only">(current)</span></a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container -->
