--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -1,22 +1,29 @@
 h3 {
     font-family: 'Source Sans Pro', sans-serif;
-    color: #343642;
+    color: #092140;
     padding-top: .5em;
     padding-left: 1em;
 }
 
 #timeline {
-    border: 5px solid black;
+    border: 5px solid #092140;
+    background-color: grey;
 }
 
 .vis-timeline {
-    border: 2px #343642;
+    border: 2px #092140;
     font-family: 'Cabin', sans-serif;
     font-weight: 500;
 }
 
-.vis-container {
-    border: 4px solid black;
+.vis-label.pos {
+    background-color: rgba(70, 232, 101, .75);
+    color: black;
+}
+
+.vis-label.neg {
+    background-color: rgba(232, 93, 115, .75);
+    color: black;
 }
 
 .vis-item.vis-dot {
@@ -26,23 +33,36 @@ h3 {
 
 .vis-item {
     color: #E1E8E8;
-    background-color: #343642;
-    border-color: #962D3E;
+    background-color: #024959;
+    border-color: #092140;
     border-width: 3px;
     font-family: 'Cabin', sans-serif;
     font-weight: 400;
 }
 
+.vis-item-content > a {
+    color: #000000;
+}
+
+.vis-item-content > a:hover {
+    color: #BF2A2A;
+}
+
 .vis-item.vis-selected {
     background-color: #348899;
-    border-color: #343642;
+    border-color: #BF2A2A;
     border-width: 5px;
 }
 
 .vis-time-axis .vis-grid.vis-minor {
     border-width: 2px;
-    border-color: #979C9C;
+    border-color: black;
 }
+
+.vis-time-axis .vis-text {
+    color: black;
+}
+
 .vis-group.pos {
     background-color: rgba(70, 232, 101, .9);
 }
