--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -24,7 +24,7 @@
                 var items = new vis.DataSet(data.items);
                 console.log(items);
                 var groups = new vis.DataSet(data.groups)
-                var options = { zoomable: true,
+                var options = { zoomable: false,
                                 start: new Date(1958, 1, 1),
                                 end: new Date(2018, 1 ,1),
                               };    //
