App updates, reset requirements.txt.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,36 +1,24 @@
-.modal-backdrop {
-  z-index: -1;
-}
 
 .navbar-default {
     background-color: #962D3E;
 }
 
 .navbar-default .navbar-brand {
-    color: #024959;
+    color: #343642;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 600;
     font-size: 30px
 }
 
-.navbar-default .navbar-brand > p:hover {
-    color: #F24738;
-    background-color: #F2C777;
-}
-
-.navbar-default .navbar-nav > li {
-    color: #F24738;
-}
-
 #navbar-text {
-    color: #F2C777;
+    color: white;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 600;
     font-size: 22px;
 }
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    background-color: #024959;
+    background-color: #F2C777;
     color: #F24738;
 }
 
