Reset some changes on the app with connecting to db and using d3 script.

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,6 @@
 			<span class='label label-pos'>Positive</span>
 			<span class='label label-neut'>Neutral</span>
 			<span class='label label-neg'>Negative</span>
-		</ul>
 	</div>
 </div>
 
@@ -26,7 +25,7 @@
 	</div>
 </div>
 
-<script src="http://d3js.org/d3.v4.min.js"></script>
+<script type='text/javascript' src="http://d3js.org/d3.v4.min.js"></script>
 <script type= 'text/javascript' src="/static/js/prez-force-layout.js"></script>
 
 	<div class='container' id='about'>
