--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 	</div>
 </div>
 
-<script type='text/javascript' src="http://d3js.org/d3.v4.min.js"></script>
+<script type='text/javascript' src="https://d3js.org/d3.v4.min.js"></script>
 <script type= 'text/javascript' src="/static/js/prez-force-layout.js"></script>
 
 	<div class='container' id='about'>
