--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis.min.js"></script>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis.min.css' type='text/css'>
 <link rel="stylesheet" type="text/css" href="/static/css/timeline.css">
 
@@ -13,12 +13,12 @@
         <div class='row'>
             <div class='col-xs-12 col-md-12 col-lg-12'></div>
         </div>
-    </div>    
+    </div>
 
     <script type='text/javascript'>
 
         $.ajax({
-            url: '/timeline.json', 
+            url: '/timeline.json',
             success: function (data) {
                 var container = $('#timeline')[0];
                 var items = new vis.DataSet(data.items);
@@ -28,7 +28,7 @@
                                 start: new Date(1958, 1, 1),
                                 end: new Date(2018, 1 ,1),
                               };    //
-                var prezTimeline = new vis.Timeline(container, items, 
+                var prezTimeline = new vis.Timeline(container, items,
                                                     groups, options);
             },
             error: function (err) {
